# pico-timer

./: CMakeLists.txt  README.md  main.py  main_flags.py  main_old.py  main_v2.py  params.py  run.sh
python/: main.py
src/: CMakeLists.txt  timer.c
